--- a/src/engine/ruleset/integrations/windows/decoders/windows-powershell.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-powershell.yml
@@ -70,6 +70,9 @@ normalize:
    - file.extension: $_file_data.ext
    - file.name: $_file_data.name
 
+  # Set message of id
+   - message: kvdb_get(windows_powershell_id_to_message, $event.code)
+
  - check: $event.code == '400'
    map:
     - event.type: array_append(start)
