--- a/src/engine/ruleset/integrations/windows/decoders/windows-security.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-security.yml
@@ -45,6 +45,9 @@ normalize:
       # Set Kerberos Ticket Options
       - windows.EventData.TicketOptionsDescription: kvdb_decode_bitmask(windows_sec_bitmask_tables, TicketOptions, $windows.EventData.TicketOptions)
 
+      # Set message of id
+      - message: kvdb_get(windows_sec_id_to_message, $event.id)
+
   # Set Kerberos Encryption Types - windows.EventData.TicketEncryptionTypeDescription
   - check: exists($windows.EventData.TicketEncryptionType)
     map:
