CL: - Add a flag to enable the unit tests

--- a/src/shared_modules/content_manager/CMakeLists.txt
+++ b/src/shared_modules/content_manager/CMakeLists.txt
@@ -51,4 +51,6 @@ set_target_properties(content_manager PROPERTIES
 )
 
 add_subdirectory(testtool)
-add_subdirectory(tests)
+if(UNIT_TEST)
+    add_subdirectory(tests)
+endif()
