--- a/src/shared_modules/indexer_connector/CMakeLists.txt
+++ b/src/shared_modules/indexer_connector/CMakeLists.txt
@@ -47,4 +47,6 @@ set_target_properties(indexer_connector PROPERTIES
 )
 
 add_subdirectory(testtool)
-add_subdirectory(tests)
+if(UNIT_TEST)
+    add_subdirectory(tests)
+endif()
