--- a/src/shared_modules/indexer_connector/testtool/input/config.json
+++ b/src/shared_modules/indexer_connector/testtool/input/config.json
@@ -1,6 +1,6 @@
 {
   "indexer": {
-  "name": "vulnerability-state",
+  "name": "wazuh-states-vulnerabilities",
   "enabled": "yes",
   "hosts": ["http://192.168.1.7:9200"],
   "username": "user",
