--- a/src/win32/version.rc
+++ b/src/win32/version.rc
@@ -16,7 +16,7 @@
 #define QUOTE(x) Q(x)
 
 #ifndef VER_PRODUCTVERSION
-#define VER_PRODUCTVERSION 
+#define VER_PRODUCTVERSION 4,5,4,0
 #endif
 
 #ifndef VER_PRODUCTVERSION_STR
